# junior-developer

./: Makefile  README.md
.github/workflows/: ci.yml
backend/: main.py  models.py  pyproject.toml  test_main.py
backend/data/: mock.json
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/src/app/utils/: fetchData.ts
frontend/src/components/: Content.module.css  Content.tsx
frontend/src/tests/: content.spec.ts
frontend/src/types/: types.ts
